--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,7 @@ name = "majestikmagikcom"
 main = ".vercel/output/static/_worker.js/index.js"
 compatibility_date = "2024-01-01"
 compatibility_flags = ["nodejs_compat"]
+pages_build_output_dir = ".vercel/output/static" 
 
 [build]
 command = "npm run build"
